--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
 
 .crt-screen {
   position: relative;
-  width: 76%; /* Adjust based on the TV frame's inner dimensions */
-  height: 70%; /* Adjust based on the TV frame's inner dimensions */
+  width: 100%; /* Adjust based on the TV frame's inner dimensions */
+  height: 100%; /* Adjust based on the TV frame's inner dimensions */
   background: #000;
   overflow: hidden;
   font-family: 'Press Start 2P', cursive;
@@ -78,7 +78,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 20vh;
+  justify-content: center;
+  height: 60%;
+  margin-left: 23%;  /* Shifts the content slightly left */
 }
 
 .title {
