Added music effects and ship gif

--- a/src/components/GameScreen/GameScreen.css
+++ b/src/components/GameScreen/GameScreen.css
@@ -1,9 +1,13 @@
 .game-container {
   display: flex;
-  height: 100%;
-  width: 100%;
-  max-height: 100%;
+  height: 100%; /* Reduced from 100% */
+  width: 54%; /* Reduced from 100% */
+  max-height: 80%; /* Reduced from 100% */
   overflow: hidden;
+  margin: 0 auto; /* Centers the container horizontally */
+  position: relative; /* Helps with positioning */
+  top: 10%; /* Creates space at the top */
+  right: 3.5%;
 }
 
 .game-area {
