--- a/src/components/Alien/Alien.css
+++ b/src/components/Alien/Alien.css
@@ -1,9 +1,14 @@
-.alien {
-  width: 30px;
-  height: 20px;
-  background: #f00;
+
+
+.alien-container {
   position: absolute;
-  clip-path: polygon(100% 0, 80% 100%, 20% 100%, 0 0);
+  transform: translate(-50%, -50%);
+  transition: all 0.5s ease-in-out;
+}
+
+.alien-image {
+  width: 80px;
+  height: auto;
   animation: float 2s ease-in-out infinite;
 }
 
